# dots-matrix-bot

./: .dockerignore  .drone.yaml  .gitignore  CHANGELOG.org  README.rst  dev_requirements.txt  docker-compose.yaml  pyproject.toml
src/: main.py
src/api/v2/: cart_api.py  category_api.py  city_api.py  company_api.py  user_api.py
src/config/: dots_bot_api_config.py
src/fetcher/v2/: api_fetcher.py
src/fmt/: abstract_formatter.py  cart_item_formatter.py  category_formatter.py  city_formatter.py  company_formatter.py  item_formatter.py  order_formatter.py
src/handlers/: __init__.py  cart.py  category.py  city.py  company.py  help.py  user.py
tests/fmt/: test_category_formatter.py  test_city_formatter.py  test_company_formatter.py  test_item_formatter.py
